# ProSA-Ollama

./: .gitignore  Cargo.toml  README.md
src/: adaptor.rs  proc.rs
