[package]
name = "prosa-ollama"
version = "0.3.1"
authors = ["Jeremy HERGAULT"]
repository = "https://github.com/reneca/ProSA-Ollama"
license = "LGPL-3.0-or-later"
edition = "2024"
description = "ProSA processor for Ollama"

[package.metadata.prosa.ollama]
proc = "proc::OllamaProc"
settings = "proc::OllamaProcSettings"

[dependencies]
ollama-rs = "0.3"
prosa = "0.2"
prosa-utils = "0.2"
serde = "1"
tokio = "1"
thiserror = "2"
tracing = "0.1"
bytes = "1"
url = { version = "2", features = ["serde"] }
